ingress/1-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app1-ingress
  labels:
    app: app1-ingress

spec:
  ingressClassName: nginx
  rules:
    - host: max.html.to
      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: app1-service
                port:
                  number: 80
