ingress/2-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: app1-ingress1
  labels:
    app: app1-ingress1

spec:
  ingressClassName: nginx
  rules:
    - host: max.dockerbox.io
      http:
        paths:
          - path: /
            pathType: Prefix
        
            backend:
              service:
                name: app1-service
                port: 
                  number: 80
