ingress/3-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app1-ingress2
  labels: 
    app: app1-ingress2

spec:
  ingressClassName: nginx

  rules:
    - http:
        paths:
          - path: /app2
            pathType: Prefix

            backend:
              service:
                name: app1-service
                port:
                  number: 80
