ingress/nginx-ingress-host-based.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: app-ingress

spec:
  ingressClassName: nginx

  rules:
    - host: t.ubuntu.io

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: app1-service
                port:
                  number: 80
